Added apache configuration.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,5 @@
 python-yubiauth (0.1.1-1) unstable; urgency=low
 
-  * New upstream release
-
-  * Automated database creation using dbconfig-common.
-
- -- Dain Nilsson <dain@yubico.com>  Tue, 09 Apr 2013 13:47:21 +0200
-
-python-yubiauth (0.1-1) unstable; urgency=low
-
-  * source package automatically created by stdeb 0.6.0+git
+  * Initial release (closes #XXX)
 
  -- Dain Nilsson <dain@yubico.com>  Mon, 08 Apr 2013 11:17:29 +0200
