--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+* Version 0.2.0 (released 2013-04-22)
+
+  * Reorganized namespace.
+
+  * Added client API.
+
 * Version 0.1.3 (released 2013-04-15)
 
   * Use latest yubico-client (1.7.0) with new module name.
