--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+* Version 0.2.1 (released 2013-04-22)
+
+  * Re-release of 0.2.0 as the original release was missing files.
+
 * Version 0.2.0 (released 2013-04-22)
 
   * Reorganized namespace.
