Imported Upstream version 0.2.5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2013-05-17  Dain Nilsson <dain@yubico.com>
+
+	* NEWS: Updated NEWS for release.
+
+2013-05-17  Dain Nilsson <dain@yubico.com>
+
+	* NEWS, setup.py: Bumped version.
+
+2013-05-17  Dain Nilsson <dain@yubico.com>
+
+	* yubiauth/util/utils.py: Use provided YKVAL URLs.
+
 2013-05-14  Dain Nilsson <dain@yubico.com>
 
 	* test/test_rest_api.py, yubiauth/core/rest.py: Added test for
