--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+* Version 0.2.5 (released 2013-05-17)
+
+  * Fixed bug where custom YKVAL URLs were ignored.
+
 * Version 0.2.4 (released 2013-05-14)
 
   * Cleanup rows in user-yubikey bindings table on user/yubikey deletion.
