--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+* Version 0.3.0 (released 2013-05-30)
+
+  * Added examples/ with FreeRADIUS example.
+
+  * Use Beaker for session management.
+
+  * Added basic client UI for user registration and management.
+
 * Version 0.2.5 (released 2013-05-17)
 
   * Fixed bug where custom YKVAL URLs were ignored.
