--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,23 @@
 
 2013-06-04  Dain Nilsson <dain@yubico.com>
 
+	* NEWS, yubiauth/__init__.py, yubiauth/client/rest.py,
+	yubiauth/client/templates/logged_in.html,
+	yubiauth/client/templates/manage.html,
+	yubiauth/client/templates/status.html, yubiauth/client/web.py,
+	yubiauth/config.py, yubiauth/default_settings.py: Renamed
+	status->manage.
+
+2013-06-04  Dain Nilsson <dain@yubico.com>
+
+	* NEWS, setup.py: Bumped version post release.
+
+2013-06-04  Dain Nilsson <dain@yubico.com>
+
+	* NEWS: Updated NEWS for release.
+
+2013-06-04  Dain Nilsson <dain@yubico.com>
+
 	* yubiauth/client/controller.py, yubiauth/client/rest.py,
 	yubiauth/client/web.py, yubiauth/core/controller.py: More logging
 	fixes.
