--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+* Version 0.3.3 (released 2013-06-04)
+
+  * Renamed /client/status to /client/manage.
+
+  * Added setting to enable user deletion.
+
 * Version 0.3.2 (released 2013-06-04)
 
   * Accept longs as well as ints in YubiAuth.get_user().
