--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+* Version 0.3.4 (released 2013-07-17)
+
+  * Unbounded attribute values.
+
+  * Added HTTP Basic Auth example.
+
 * Version 0.3.3 (released 2013-06-04)
 
   * Renamed /client/status to /client/manage.
