--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+* Version 0.3.7 (released 2013-11-25)
+
+  * Fixed bug with LDAP user auto-creation.
+
 * Version 0.3.6 (released 2013-11-22)
 
   * Added LDAP authentication.
