--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+* Version 0.3.9 (released 2014-08-02)
+
+  * Set pool recycle to 1h in SQLAlchemy (should prevent stale connections for MySQL).
+
+  * Added YubiKey lookup from LDAP.
+
+  * Return 404 when trying to unbind a YubiKey from a user if it was not already bound.
+
 * Version 0.3.8 (released 2014-02-21)
 
   * Fixed compatibility with newer versions of yubico-client.
